fixed a overflow mistake

--- a/src/Components/Tables/Tables.scss
+++ b/src/Components/Tables/Tables.scss
@@ -25,17 +25,11 @@
 		overflow-y: auto;
 	}
 	.table-container {
-		overflow-y: hidden;
+		// overflow-y: hidden;
 	}
 
-	// tbody {
-	// 	display: inline-block;
-	// 	height: 40rem;
-	// 	overflow-y: auto;
-	// }
-
 	.MuiPaper-root {
-		// height: 40rem;
+		height: 40rem;
 	}
 
 	.MuiTable-root {
